# mezake-odoo-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  railway.toml  server.py
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
src/mezake_mcp/: __main__.py  audit.py  config.py  logging_setup.py  mcp_instance.py  server.py
src/mezake_mcp/auth/: __init__.py  admin.py  bootstrap.py  codes.py  context.py  crypto.py  middleware.py  onboarding.py  pkce.py  policy.py  rate_limit.py  resolver.py  routes.py  tokens.py  wrap.py
src/mezake_mcp/odoo/: __init__.py  client.py  compat.py
src/mezake_mcp/storage/: __init__.py  db.py  migrate.py  models.py
src/mezake_mcp/tools/: __init__.py  generic.py  legacy.py
tests/: conftest.py  test_admin.py  test_audit.py  test_bootstrap.py  test_codes.py  test_compat.py  test_context_merge.py  test_crypto.py  test_middleware.py  test_onboarding.py  test_pkce.py  test_policy.py  test_rate_limit.py  test_resolver.py  test_storage.py  test_tokens.py
